@@ -1,6 +1,9 @@
 Changelog for GEMC
 ==================
 
+9/28/16
+ - addressing precision issue in bst hit process routine
+
 9/27/16
  - fixed cosmic routine, was not generating cosmics vertices correctly.
 
